# suspiria

./: .gitignore  .gitignore~  CMakeLists.txt  CMakeLists~preCiscenja  main.cpp  resource.qrc  shaders.qrc  suspiria_en_US.ts  wasm.cmake
assets/: cube.fbx  cubemaya.fbx
dep/: bullet  glm
dep/bullet3-master081320/: CMakeLists.txt
dep/bullet3-master081320/Extras/BulletRobotics/: CMakeLists.txt
dep/bullet3-master081320/Extras/BulletRoboticsGUI/: CMakeLists.txt
dep/bullet3-master081320/src/LinearMath/: CMakeLists.txt
dep/glm-0.9.9.8/glm/ext/: quaternion_float.hpp
shaders/: PBRForward.fs  PBRForward.vs  background.fs  background.vs  brdf.fs  brdf.vs  cubemap.vs  cubemaps.fs  debugquad.fs  debugquad.vs  equirectangular_to_cubemap.fs  fbscreen.fs  fbscreen.vs  fshader.glsl  gp.fs  gp.vs  irradiance_convolution.fs  mirrorboxmap.fs  mirrorboxmap.vs  pbr.fs  pbr.vs  prefilter.fs  renderbuffer.fs  renderbuffer.vs  shader.fs  shader.vs  shadowmap.fs  shadowmap.vs  sky.fs  sky.vs  skybox.vs  tutorial.fs  tutorial.vs  vshader.glsl
src/: assimpload.cpp  assimpload.h  camera.cpp  camera.h  components.h  entity.cpp  entity.h  geometryengine.cpp  geometryengine.h  glmtransform.cpp  glmtransform.h  glwindow.cpp  glwindow.h  gptgenerate.sh  gpthgather.txt~  light.cpp  light.h  main.cpp  material.cpp  material.h  mesh.cpp  mesh.h  meshmanager.cpp  meshmanager.h  model.cpp  model.h  scene.cpp  scene.h  shaderprogram.cpp  shaderprogram.h  spacial.cpp  spacial.h  suspiria.cpp  suspiria.h  texture.cpp  texture.h  texturemanager.cpp  texturemanager.h  transform.cpp  transform.h  (+3 more)
